--- a/client/src/app/update-event-status/update-event-status.component.html
+++ b/client/src/app/update-event-status/update-event-status.component.html
@@ -1,4 +1,5 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
+<home-navbar></home-navbar>
 <div class="container d-flex justify-content-center align-items-center">
   <div class="card shadow-sm" style="max-width: 500px; width: 100%;">
     <div class="card-header bg-primary text-white text-center py-3 fs-5 fw-bold">
