--- a/client/src/shared/footer/footer.component.html
+++ b/client/src/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="footer-top">
     <!-- Logo -->
     <div class="footer-logo">
-      <img src="assets/logoo.png" width="50" height="50">
+      <img src="assets/logo.png" width="50" height="50">
     </div>
 
     
