--- a/client/src/app/create-event/create-event.component.html
+++ b/client/src/app/create-event/create-event.component.html
@@ -1,4 +1,5 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
+<home-navbar></home-navbar>
 <div class="container">
   <div class="row">
     <div class="col-md-6 left-panel">
