--- a/client/src/app/home/home-page.component.html
+++ b/client/src/app/home/home-page.component.html
@@ -1,10 +1,11 @@
 <!-- Hero Section -->
- <home-navbar></home-navbar>
+<home-navbar></home-navbar>
 <section class="hero-section d-flex align-items-center justify-content-center">
   <div class="hero-content text-white">
     <h1 class="fw-bold mb-3">Empower Your Financial Future</h1>
-    <p class="lead mb-4">Welcome to Financial Seminar & Workshop - Your Gateway to mastering financial literacy and building a secure future.</p>
-    <div>
+    <p class="lead mb-4">Welcome to Financial Seminar & Workshop - Your Gateway to mastering financial literacy and
+      building a secure future.</p>
+    <div *ngIf="!authService.getLoginStatus">
       <a routerLink="/registration" class="btn btn-primary btn-lg me-3">Register Now</a>
       <a routerLink="/login" class="btn btn-outline-light btn-lg login">Login</a>
     </div>
@@ -13,3 +14,4 @@
     <img src="assets/home-image.png" alt="">
   </div>
 </section>
+<app-footer></app-footer>
