changed navbar UI

--- a/client/src/app/add-feedback/add-feedback.component.html
+++ b/client/src/app/add-feedback/add-feedback.component.html
@@ -2,7 +2,7 @@
 <home-navbar></home-navbar>
 <div class="parent">
 
-  <div class="d-flex align-items-center gap-30 mb-3">
+  <div class="d-flex align-items-center mb-3">
     <button class="btn d-flex align-items-center gap-2 ms-3" (click)="goBack()">
       <i class="bi-arrow-left-circle-fill fs-2"></i>
     </button>
