--- a/client/src/app/login/login.component.scss
+++ b/client/src/app/login/login.component.scss
@@ -5,7 +5,7 @@
   margin-bottom: 20;
 }
 .left-panel {
-  background-color: #6f42c1;
+  background: linear-gradient(135deg, #0f2027, #2c5364);
   // background-color: grey;
   color: white;
   padding: 10px;
@@ -49,7 +49,8 @@
   transition: all 0.2s ease;
 }
 .btn-custom {
-  background-color: #6f42c1;
+  // background-color: #6f42c1;
+  background: linear-gradient(135deg, #0f2027, #2c5364);
   color: white;
   border: none;
   padding: 10px;
