--- a/client/src/app/registration/registration.component.html
+++ b/client/src/app/registration/registration.component.html
@@ -59,7 +59,7 @@
         <!-- Register Button  -->
         <button type="submit" class="btn btn-custom w-100 buttonstyle" [disabled]="itemForm.invalid">{{loading ? 'Signing up...' : 'Register'}}
         </button>
-        <p class="mt-3">Already have an account? <a class="login-link" routerLink="/login">Login</a></p>
+        <p class="mt-3 text-center">Already have an account? <a class="login-link" routerLink="/login">Login</a></p>
         <span *ngIf="showMessage" class="text-center text-success fs-5">{{responseMessage}}</span>
       </form>
     </div>
