--- a/client/src/shared/home-navbar/home-navbar.component.html
+++ b/client/src/shared/home-navbar/home-navbar.component.html
@@ -1,11 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
   <div class="container-fluid">
-    <!-- Brand -->
     <div class="d-flex">
-      <div class="footer-logo">
-        <img src="assets/logo.png" width="40" height="40">
-      </div>
-      <a class="navbar-brand fw-bold" routerLink="/">Financial Seminar & Workshop</a>
+      <a class="navbar-brand fw-bold d-flex align-items-center" routerLink="/">
+        <div class="footer-logo">
+          <img src="assets/logo.png" width="40" height="40">
+        </div>
+        Financial Seminar & Workshop
+      </a>
     </div>
 
     <!-- Toggler for mobile -->
@@ -81,3 +82,5 @@
     </div>
   </div>
 </nav>
+
+
