--- a/client/src/app/about-us/about-us.component.scss
+++ b/client/src/app/about-us/about-us.component.scss
@@ -16,10 +16,10 @@
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
-.about-us p {
-  color: #555;
-  line-height: 1.6;
-}
+// .about-us p {
+//   color: #555;
+//   line-height: 1.6;
+// }
 
 .about-us img {
   max-width: 90%;
